Correção do main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
         server: 144.22.199.40
         username: admin_artur
         password: pj%nwpOj-oOeI2tF
-        server-dir: pipe/
+        server-dir: pipe.ajung.site/
